--- a/Frontend/src/app/MOHComponents/add-weight-height/add-weight-height.component.html
+++ b/Frontend/src/app/MOHComponents/add-weight-height/add-weight-height.component.html
@@ -3,18 +3,16 @@
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header card-header-danger">
-                    <h4 class="card-title">Update Weight Height Table</h4>
-                    <p class="card-category">Complete profile</p>
+                    <h4 class="card-title"> {{'weightHeight.add'| translate}} </h4>
+                   
                 </div>
                 <div class="card-body">
                     <form [formGroup]="WeightHeightForm" [hidden]="success" (ngSubmit)="onSubmit()">
                         
-                        <h3>Babies' And Children's Weight Height Form</h3>
-                        
                         <div class="row">
                           <div class="col-md-3">
                               <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Baby ID" type="text" formControlName="baby_id">
+                                  <input matInput placeholder="{{'weightHeight.baby_id'| translate}}" type="text" formControlName="baby_id">
                                   <div *ngIf="submitted && WeightHeightForm.controls.baby_id.errors" class="error">
                                       <div *ngIf="WeightHeightForm.controls.baby_id.errors.required">This field is required</div>
                                     </div>
@@ -22,7 +20,7 @@
                           </div>
                           <div class="col-md-5">
                               <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Name Of Child" type="text" formControlName="name_of_child">
+                                  <input matInput placeholder="{{'weightHeight.childs_name'| translate}}" type="text" formControlName="name_of_child">
                                   <div *ngIf="submitted && WeightHeightForm.controls.name_of_child.errors" class="error">
                                       <div *ngIf="WeightHeightForm.controls.name_of_child.errors.required">This field is required</div>
                                     </div>
@@ -30,7 +28,7 @@
                           </div>
                           <div class="col-md-2">
                             <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Sex" type="text" formControlName="sex">
+                                <input matInput placeholder="{{'weightHeight.sex'| translate}}" type="text" formControlName="sex">
                                 <div *ngIf="submitted && WeightHeightForm.controls.sex.errors" class="error">
                                     <div *ngIf="WeightHeightForm.controls.sex.errors.required">This field is required</div>
                                   </div>
@@ -40,7 +38,7 @@
                         <mat-expansion-panel>
                             <mat-expansion-panel-header>
                               <mat-panel-title>
-                                <h5>Birth Details</h5>
+                                <h5>{{'weightHeight.birth_details'| translate}}</h5>
                               </mat-panel-title>
                               <mat-panel-description>
                                 Click to View/Edit
@@ -49,7 +47,7 @@
                         <div class="row">
                           <div class="col-md-4">
                               <mat-form-field class="example-full-width">
-                                  <input matInput placeholder="Date Of Child" type="date" formControlName="Date_of_birth">
+                                  <input matInput placeholder="{{'weightHeight.date_of_birth'| translate}}" type="date" formControlName="Date_of_birth">
                                   <div *ngIf="submitted && WeightHeightForm.controls.Date_of_birth.errors" class="error">
                                       <div *ngIf="WeightHeightForm.controls.Date_of_birth.errors.required">This field is required</div>
                                     </div>
@@ -57,7 +55,7 @@
                           </div>
                           <div class="col-md-3">
                             <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Batch No" type="text" formControlName="batch_no">
+                                <input matInput placeholder="{{'weightHeight.bathch_no'| translate}}" type="text" formControlName="batch_no">
                                 <div *ngIf="submitted && WeightHeightForm.controls.batch_no.errors" class="error">
                                     <div *ngIf="WeightHeightForm.controls.batch_no.errors.required">This field is required</div>
                                   </div>
@@ -67,10 +65,10 @@
                         </div>
                        
                         <div class="row">
-                          <div class="col-md-4">At Birth</div>
+                          <div class="col-md-4">{{'weightHeight.atBirth'| translate}}</div>
                           <div class="col-md-4">
                             <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Weight" type="number" formControlName="weight_of_birth">
+                                <input matInput placeholder="{{'weightHeight.weight'| translate}}" type="number" formControlName="weight_of_birth">
                                 <div *ngIf="submitted && WeightHeightForm.controls.weight_of_birth.errors" class="error">
                                     <div *ngIf="WeightHeightForm.controls.weight_of_birth.errors.required">This field is required</div>
                                   </div>
@@ -78,14 +76,14 @@
                           </div>
                           <div class="col-md-4">
                             <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Height" type="number" formControlName="height_of_birth">
+                                <input matInput placeholder="{{'weightHeight.height'| translate}}" type="number" formControlName="height_of_birth">
                                 <div *ngIf="submitted && WeightHeightForm.controls.height_of_birth.errors" class="error">
                                     <div *ngIf="WeightHeightForm.controls.height_of_birth.errors.required">This field is required</div>
                                   </div>
                               </mat-form-field>
                           </div>
                           <div class="col-md-6">
-                            <label>Other Details</label>
+                            <label>{{'weightHeight.otherDetails'| translate}}</label>
                             <mat-form-field class="example-full-width">
                               <textarea matInput placeholder="" formControlName="other_details" ></textarea>
                             </mat-form-field>
@@ -95,7 +93,7 @@
                     <mat-expansion-panel>
                       <mat-expansion-panel-header>
                         <mat-panel-title>
-                          <h5>Weight Table</h5>
+                          <h5>{{'weightHeight.weighttable'| translate}}</h5>
                         </mat-panel-title>
                         <mat-panel-description>
                           Click to View/Edit
@@ -103,21 +101,21 @@
                       </mat-expansion-panel-header>
                         <div class="wight_field">
                             <!--start field-->
-                            <h3>Weight Table</h3>
+                            <h3>{{'weightHeight.weighttable'| translate}}</h3>
                             <div class="row">
                                 <div class="col-md-2"></div>
-                                <div class="col-md-2">First Year</div>
-                                <div class="col-md-2">Second Year</div>
-                                <div class="col-md-2">Third Year</div>
-                                <div class="col-md-2">Fourth Year</div>
-                                <div class="col-md-2">Fifth Year</div>
+                                <div class="col-md-2">{{'weightHeight.firstYear'| translate}}</div>
+                                <div class="col-md-2">{{'weightHeight.secondYear'| translate}}</div>
+                                <div class="col-md-2">{{'weightHeight.thirdYear'| translate}}</div>
+                                <div class="col-md-2">{{'weightHeight.fourthYear'| translate}}</div>
+                                <div class="col-md-2">{{'weightHeight.fifthYear'| translate}}</div>
                             </div>
                             <div class="row">
-                                <div class="col-md-2">Age Of Month</div>
-                                <div class="col-md-10">Weight From kg</div>
+                                <div class="col-md-2">{{'weightHeight.ageofMonth'| translate}}</div>
+                                <div class="col-md-10">{{'weightHeight.weightFromKG'| translate}}</div>
                             </div>
                             <div class="row">
-                                <div class="col-md-2">First Month</div>
+                                <div class="col-md-2">{{'weightHeight.firstMonth'| translate}}</div>
                                 <div class="col-md-2">
                                     <mat-form-field class="example-full-width">
                                         <input matInput placeholder="" type= "number" formControlName="first_yearone">
@@ -145,7 +143,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-2">Second Month</div>
+                                <div class="col-md-2">{{'weightHeight.secondMonth'| translate}}</div>
                                 <div class="col-md-2">
                                     <mat-form-field class="example-full-width">
                                         <input matInput placeholder="" type= "number" formControlName="first_yeartwo">
@@ -173,7 +171,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-2">Third Month</div>
+                                <div class="col-md-2">{{'weightHeight.thirdMonth'| translate}}</div>
                                 <div class="col-md-2">
                                     <mat-form-field class="example-full-width">
                                         <input matInput placeholder="" type= "number" formControlName="first_yearthree">
@@ -201,7 +199,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-2">Fourth Month</div>
+                                <div class="col-md-2">{{'weightHeight.fourthMonth'| translate}}</div>
                                 <div class="col-md-2">
                                     <mat-form-field class="example-full-width">
                                         <input matInput placeholder="" type= "number" formControlName="first_yearfour">
@@ -229,7 +227,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-2">Fifth Month</div>
+                                <div class="col-md-2">{{'weightHeight.fifthMonth'| translate}}</div>
                                 <div class="col-md-2">
                                     <mat-form-field class="example-full-width">
                                         <input matInput placeholder="" type= "number" formControlName="first_yearfive">
@@ -257,7 +255,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-2">Sixth Month</div>
+                                <div class="col-md-2">{{'weightHeight.sisthMonth'| translate}}</div>
                                 <div class="col-md-2">
                                     <mat-form-field class="example-full-width">
                                         <input matInput placeholder="" type= "number" formControlName="first_yearsix">
@@ -285,7 +283,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-2">Seventh Month</div>
+                                <div class="col-md-2">{{'weightHeight.seventhMonth'| translate}}</div>
                                 <div class="col-md-2">
                                     <mat-form-field class="example-full-width">
                                         <input matInput placeholder="" type= "number" formControlName="first_yearseven">
@@ -313,7 +311,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-2">Eighth Month</div>
+                                <div class="col-md-2">{{'weightHeight.eighthMonth'| translate}}</div>
                                 <div class="col-md-2">
                                     <mat-form-field class="example-full-width">
                                         <input matInput placeholder="" type= "number" formControlName="first_yeareight">
@@ -341,7 +339,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-2">Nineth Month</div>
+                                <div class="col-md-2">{{'weightHeight.ninethMonth'| translate}}</div>
                                 <div class="col-md-2">
                                     <mat-form-field class="example-full-width">
                                         <input matInput placeholder="" type= "number" formControlName="first_yearnine">
@@ -369,7 +367,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-2">Tenth Month</div>
+                                <div class="col-md-2">{{'weightHeight.tenthMonth'| translate}}</div>
                                 <div class="col-md-2">
                                     <mat-form-field class="example-full-width">
                                         <input matInput placeholder="" type= "number" formControlName="first_yearten">
@@ -397,7 +395,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-2">Eleventh Month</div>
+                                <div class="col-md-2">{{'weightHeight.eleventhMonth'| translate}}</div>
                                 <div class="col-md-2">
                                     <mat-form-field class="example-full-width">
                                         <input matInput placeholder="" type= "number" formControlName="first_yeareleven">
@@ -425,7 +423,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-2">Twelveth Month</div>
+                                <div class="col-md-2">{{'weightHeight.twelthMonth'| translate}}</div>
                                 <div class="col-md-2">
                                     <mat-form-field class="example-full-width">
                                         <input matInput placeholder="" type= "number" formControlName="first_yeartwelve">
@@ -458,7 +456,7 @@
                     <mat-expansion-panel>
                       <mat-expansion-panel-header>
                         <mat-panel-title>
-                          <h5>Height Table</h5>
+                          <h5>{{'weightHeight.heightTable'| translate}}</h5>
                         </mat-panel-title>
                         <mat-panel-description>
                           Click to View/Edit
@@ -466,18 +464,18 @@
                       </mat-expansion-panel-header>
                         <div class="height_field">
                             <!--start height field-->
-                            <h3>Height Table</h3>
+                            <h3>{{'weightHeight.heightTable'| translate}}</h3>
                             <div class="row">
                                 <div class="col-md-2"></div>
-                                <div class="col-md-2">First Year</div>
-                                <div class="col-md-2">Second Year</div>
-                                <div class="col-md-2">Third Year</div>
-                                <div class="col-md-2">Fourth Year</div>
-                                <div class="col-md-2">Fifth Year</div>
+                                <div class="col-md-2">{{'weightHeight.firstYear'| translate}}</div>
+                                <div class="col-md-2">{{'weightHeight.secondYear'| translate}}</div>
+                                <div class="col-md-2">{{'weightHeight.thirdYear'| translate}}</div>
+                                <div class="col-md-2">{{'weightHeight.fourthYear'| translate}}</div>
+                                <div class="col-md-2">{{'weightHeight.fifthYear'| translate}}</div>
                                 
                             </div>
                             <div class="row">
-                                <div class="col-md-2">Date</div>
+                                <div class="col-md-2">{{'weightHeight.date'| translate}}</div>
                                 <div class="col-md-2">
                                      <mat-form-field class="example-full-width">
                                         <input matInput placeholder="" type= "date" formControlName="oneyeardate">
@@ -507,7 +505,7 @@
                             </div>
                             
                             <div class="row">
-                                    <div class="col-md-2">Height Or Length</div>
+                                    <div class="col-md-2">{{'weightHeight.heightOrLength'| translate}}</div>
                                     <div class="col-md-2">
                                          <mat-form-field class="example-full-width">
                                             <input matInput placeholder="" type= "number" formControlName="oneyearheight">
@@ -537,7 +535,7 @@
                             <!--end height field-->
                         </div>
                     </mat-expansion-panel>
-                       <input type="submit" value="Submit details" class="btn btn-danger pull-right">
+                       <input type="submit" value="{{'enter'| translate }}" class="btn btn-danger pull-right">
 
                      </form>
                      <div *ngIf="success"><h1>You submitted a record</h1></div>
