--- a/Frontend/src/app/MOHComponents/update-baby-book/update-baby-book.component.html
+++ b/Frontend/src/app/MOHComponents/update-baby-book/update-baby-book.component.html
@@ -15,7 +15,7 @@
                         <div class="row">
                             <div class="col-md-6">
                               <mat-form-field class="example-full-width">
-                                <input matInput placeholder="Baby ID" readonly="{{onChange()}}" type="text" formControlName="baby_id">
+                                <input matInput placeholder="{{'baby.baby_id'| translate}}" readonly="{{onChange()}}" type="text" formControlName="baby_id">
                                 <div *ngIf="submitted && BabyForm.controls.baby_id.errors" class="error">
                                     <div *ngIf="BabyForm.controls.baby_id.errors.required">This field is required</div>
                                   </div>
