motherfor doc sinahala

--- a/Frontend/src/app/MOHComponents/pregnancy-form/pregnancy-form.component.html
+++ b/Frontend/src/app/MOHComponents/pregnancy-form/pregnancy-form.component.html
@@ -1598,7 +1598,7 @@
                                    </tr>
                                    <tr>
                                        <div class="row">
-                                       <div class="col-md-4"><td>Urine Hemoglobin</td></div>
+                                       <div class="col-md-4"><td>Hemoglobin</td></div>
                                        <div class="col-md-2">
                                          <td>
                                              <mat-form-field class="example-full-width">
