--- a/Frontend/src/app/MOHComponents/update-baby-book/update-baby-book.component.html
+++ b/Frontend/src/app/MOHComponents/update-baby-book/update-baby-book.component.html
@@ -7,7 +7,7 @@
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header card-header-danger">
-                    <h4 class="card-title">Update Baby Book</h4>
+                    <h4 class="card-title">{{ 'baby.Update_Baby' | translate }}</h4>
                     <p class="card-category">Complete profile</p>
                 </div>
                 <div class="card-body">
